--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <main class="main-grid">
         <section>
           <div class="thumbnail-div">
-            <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY" target="_blank" class="video-title-link">
+            <a href="https://photos.app.goo.gl/Z2mNDTLu8X7RWjdZ8" target="_blank" class="video-title-link">
               <img class="thumbnail" src="pictures/thumbnail-1.webp">
             </a>
             <div class="video-time">14:20</div>
