--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <section>
           <div class="thumbnail-div">
             <a href="https://photos.app.goo.gl/Z2mNDTLu8X7RWjdZ8" target="_blank" class="video-title-link">
-              <img class="thumbnail" src="pictures/thumbnail-1.webp">
+              <img class="thumbnail" src="pictures/thumbnail-1.jpg">
             </a>
             <div class="video-time">14:20</div>
           </div>
